fix z-index

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,7 @@
 @use 'config' as *;
 
 .site-footer {
+  position: relative;
   font-size: font-size(extra-small);
   height: 100vh;
   width: 100%;
